Fixed some bugs, added more portal colors, changed bg in Secret Chambers

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,12 +91,18 @@ NewWindowHeight=1136
 NewWindowPosition=(X=612,Y=34)
 
 [EditorStartup]
-LastLevel=/Game/Maps/NightForest/NightForest_3
+LastLevel=/Game/Maps/NightForest/NightForest_1
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/LevelStuff/BP_SecretChamber_Big.BP_SecretChamber_Big
 OpenAssetsAtExit=/Game/Blueprints/LevelStuff/BP_SecretChamber.BP_SecretChamber
+OpenAssetsAtExit=/Game/Blueprints/LevelStuff/BP_Portal.BP_Portal
+OpenAssetsAtExit=/Game/Blueprints/Characters/BP_Character_Main.BP_Character_Main
+OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background.BP_Background
+OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background_2.BP_Background_2
+OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background_3.BP_Background_3
+OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background_4.BP_Background_4
 
 [RootWindow]
 ScreenPosition=X=308.000 Y=363.000
@@ -1296,10 +1302,14 @@ BP_SecretChamber_Big_C.Replication=True
 BP_SecretChamber_Big_C.Input=True
 BP_SecretChamber_Big_C.Actor=True
 BP_SecretChamber_Big_C.TransformCommon=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
+MulticastDelegateProperty.Variable=True
+MulticastDelegateProperty.DefaultValueCategory=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
@@ -1370,26 +1380,26 @@ ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/LevelStuff/BP_SecretChamber
-MRUItem1=/Game/Maps/NightForest/NightForest_3
-MRUItem2=/Game/Blueprints/LevelStuff/BP_SecretChamber_Big
-MRUItem3=/Game/Blueprints/LevelStuff/BP_SecretChamber_Small
-MRUItem4=/Game/Blueprints/Widgets/StandartMode/W_Info
-MRUItem5=/Game/Maps/NightForest_2
-MRUItem6=/Game/Blueprints/Characters/BP_Character_Main
-MRUItem7=/Game/Blueprints/LevelStuff/BP_Portal_OneTime
-MRUItem8=/Game/Blueprints/LevelStuff/BP_Portal
-MRUItem9=/Game/Maps/test
-MRUItem10=/Game/Blueprints/Widgets/Menu/FirstLayer/W_SeasonButton
-MRUItem11=/Game/Blueprints/Widgets/Menu/FirstLayer/W_AchievementList
-MRUItem12=/Game/Blueprints/Widgets/Menu/FirstLayer/W_LevelChooser
-MRUItem13=/Game/Blueprints/Backgrounds/Interface_MenuBG
-MRUItem14=/Game/Blueprints/Widgets/Menu/W_Menu
-MRUItem15=/Game/Maps/M_Loading1
-MRUItem16=/Game/Maps/Lake/Lake_20
-MRUItem17=/Game/Maps/Lake/Lake_19
-MRUItem18=/Game/Maps/Lake/Lake_27
-MRUItem19=/Game/Maps/Lake/Lake_26
+MRUItem0=/Game/Blueprints/Backgrounds/BP_Background_4
+MRUItem1=/Game/Blueprints/Backgrounds/BP_Background_3
+MRUItem2=/Game/Blueprints/Backgrounds/BP_Background_2
+MRUItem3=/Game/Blueprints/Backgrounds/BP_Background
+MRUItem4=/Game/Blueprints/Characters/BP_Character_Main
+MRUItem5=/Game/Maps/NightForest/NightForest_1
+MRUItem6=/Game/Blueprints/LevelStuff/BP_Portal
+MRUItem7=/Game/Maps/NightForest/NightForest_3
+MRUItem8=/Game/Blueprints/LevelStuff/BP_SecretChamber
+MRUItem9=/Game/Blueprints/LevelStuff/BP_SecretChamber_Big
+MRUItem10=/Game/Blueprints/LevelStuff/BP_SecretChamber_Small
+MRUItem11=/Game/Blueprints/Widgets/StandartMode/W_Info
+MRUItem12=/Game/Maps/NightForest_2
+MRUItem13=/Game/Blueprints/LevelStuff/BP_Portal_OneTime
+MRUItem14=/Game/Maps/test
+MRUItem15=/Game/Blueprints/Widgets/Menu/FirstLayer/W_SeasonButton
+MRUItem16=/Game/Blueprints/Widgets/Menu/FirstLayer/W_AchievementList
+MRUItem17=/Game/Blueprints/Widgets/Menu/FirstLayer/W_LevelChooser
+MRUItem18=/Game/Blueprints/Backgrounds/Interface_MenuBG
+MRUItem19=/Game/Blueprints/Widgets/Menu/W_Menu
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1439,7 +1449,7 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Maps/NightForest
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/LevelStuff
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -2179,18 +2189,18 @@ DeleteVariableInUse_Warning=False
 ChangeVariableType_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/NightForest/NightForest_3
-MRUItem1=/Game/Maps/NightForest/NightForest_2
-MRUItem2=/Game/Maps/NightForest_2
-MRUItem3=/Game/Maps/NightForest_1
-MRUItem4=/Game/Maps/test
-MRUItem5=/Game/Maps/M_Loading1
-MRUItem6=/Game/Maps/Lake/Lake_20
-MRUItem7=/Game/Maps/Lake/Lake_19
-MRUItem8=/Game/Maps/Lake/Lake_27
-MRUItem9=/Game/Maps/Lake/Lake_26
-MRUItem10=/Game/Maps/Lake/Lake_25
-MRUItem11=/Game/Maps/Lake/Lake_24
+MRUItem0=/Game/Maps/NightForest/NightForest_1
+MRUItem1=/Game/Maps/NightForest/NightForest_3
+MRUItem2=/Game/Maps/NightForest/NightForest_2
+MRUItem3=/Game/Maps/NightForest_2
+MRUItem4=/Game/Maps/NightForest_1
+MRUItem5=/Game/Maps/test
+MRUItem6=/Game/Maps/M_Loading1
+MRUItem7=/Game/Maps/Lake/Lake_20
+MRUItem8=/Game/Maps/Lake/Lake_19
+MRUItem9=/Game/Maps/Lake/Lake_27
+MRUItem10=/Game/Maps/Lake/Lake_26
+MRUItem11=/Game/Maps/Lake/Lake_25
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
