--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,18 +91,10 @@ NewWindowHeight=1136
 NewWindowPosition=(X=612,Y=34)
 
 [EditorStartup]
-LastLevel=/Game/Maps/NightForest/NightForest_1
+LastLevel=/Game/Maps/Waterfall/Waterfall_3
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/LevelStuff/BP_SecretChamber_Big.BP_SecretChamber_Big
-OpenAssetsAtExit=/Game/Blueprints/LevelStuff/BP_SecretChamber.BP_SecretChamber
-OpenAssetsAtExit=/Game/Blueprints/LevelStuff/BP_Portal.BP_Portal
-OpenAssetsAtExit=/Game/Blueprints/Characters/BP_Character_Main.BP_Character_Main
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background.BP_Background
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background_2.BP_Background_2
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background_3.BP_Background_3
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background_4.BP_Background_4
 
 [RootWindow]
 ScreenPosition=X=308.000 Y=363.000
@@ -1306,10 +1298,16 @@ MulticastDelegateProperty.Delegate=True
 MulticastDelegateProperty.DelegateInputs=True
 MulticastDelegateProperty.Variable=True
 MulticastDelegateProperty.DefaultValueCategory=True
+BP_Turret_Easy_C.TransformCommon=True
+BP_Turret_Easy_C.Turret Settings=True
+BP_Turret_Easy_C.Rendering=True
+BP_Turret_Easy_C.Replication=True
+BP_Turret_Easy_C.Input=True
+BP_Turret_Easy_C.Actor=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
@@ -1529,7 +1527,7 @@ OnePane.Viewport 1.bIsMaximized=False
 OnePane.Viewport 1.MaximizedViewport=None
 
 [Directories2]
-UNR=../../../../BlockRoller/BlockRoller2D/Content/Maps/NightForest
+UNR=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/Waterfall
 BRUSH=../../../../BlockRoller/BlockRoller2D/Content/
 FBX=../../../../BlockRoller/BlockRoller2D/Content/
 FBXAnim=../../../../BlockRoller/BlockRoller2D/Content/
@@ -1539,7 +1537,7 @@ GenericOpen=../../../../BlockRoller/BlockRoller2D/Content/
 GenericSave=../../../../BlockRoller/BlockRoller2D/Content/
 MeshImportExport=../../../../BlockRoller/BlockRoller2D/Content/
 WorldRoot=../../../../BlockRoller/BlockRoller2D/Content/
-Level=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/Lake
+Level=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/Waterfall
 Project=F:/UE_4.21/
 
 [ModuleFileTracking]
@@ -2189,18 +2187,18 @@ DeleteVariableInUse_Warning=False
 ChangeVariableType_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/NightForest/NightForest_1
-MRUItem1=/Game/Maps/NightForest/NightForest_3
-MRUItem2=/Game/Maps/NightForest/NightForest_2
-MRUItem3=/Game/Maps/NightForest_2
-MRUItem4=/Game/Maps/NightForest_1
-MRUItem5=/Game/Maps/test
-MRUItem6=/Game/Maps/M_Loading1
-MRUItem7=/Game/Maps/Lake/Lake_20
-MRUItem8=/Game/Maps/Lake/Lake_19
-MRUItem9=/Game/Maps/Lake/Lake_27
-MRUItem10=/Game/Maps/Lake/Lake_26
-MRUItem11=/Game/Maps/Lake/Lake_25
+MRUItem0=/Game/Maps/Waterfall/Waterfall_3
+MRUItem1=/Game/Maps/Waterfall/Waterfall_32
+MRUItem2=/Game/Maps/Waterfall/Waterfall_4
+MRUItem3=/Game/Maps/Waterfall/Waterfall_1
+MRUItem4=/Game/Maps/NightForest/NightForest_1
+MRUItem5=/Game/Maps/NightForest/NightForest_3
+MRUItem6=/Game/Maps/NightForest/NightForest_2
+MRUItem7=/Game/Maps/NightForest_2
+MRUItem8=/Game/Maps/NightForest_1
+MRUItem9=/Game/Maps/test
+MRUItem10=/Game/Maps/M_Loading1
+MRUItem11=/Game/Maps/Lake/Lake_20
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2289,14 +2287,17 @@ UdpMessagingSettings=MoviePlayerSettings.Movies.StartupMovies,
 WmfMediaSettings=MoviePlayerSettings.Movies.StartupMovies,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Turret_Easy.BP_Turret_Easy;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Turret_Extreme.BP_Turret_Extreme;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Turret_Medium.BP_Turret_Medium;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatformWithChildCircle.BP_MovingPlatformWithChildCircle;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal.BP_Portal;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_BuffSpeed.BP_BuffSpeed;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_SecretChamber_Big.BP_SecretChamber_Big;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_RotatBuff.BP_RotatBuff;
@@ -2306,9 +2307,6 @@ RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_Background_3.BP_Background_3;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_SecretChamber.BP_SecretChamber;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CircleWithChildCircle.BP_CircleWithChildCircle;
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Slow.BP_Slow;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform_OneIteration.BP_MovingPlatform_OneIteration;
 
 [PathColor]
 /Game/Assets=(R=0.000000,G=0.106163,B=0.500000,A=1.000000)
