Fixed more bugs, added some stuff in menu

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,10 +12,11 @@ ProjectVersion=0.7.1
 CompanyDistinguishedName=PJTeam
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-StagingDirectory=(Path="../../../../BlockRoller/BlockRoller Beta v1.2")
-BuildConfiguration=PPBC_DevelopmentClient
+StagingDirectory=(Path="C:/Users/LeaveMyYard/Desktop/Block Roller Builds/Block Roller Teaser")
+BuildConfiguration=PPBC_ShippingClient
 FullRebuild=False
 ForDistribution=False
+UsePakFile=False
 
 [/Script/MoviePlayer.MoviePlayerSettings]
 bWaitForMoviesToComplete=False
