--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,10 +91,19 @@ NewWindowHeight=1136
 NewWindowPosition=(X=612,Y=34)
 
 [EditorStartup]
-LastLevel=/Game/Maps/Waterfall/Waterfall_3
+LastLevel=/Game/Maps/M_Loading1
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Widgets/InfinityMode/W_InfinityInterface.W_InfinityInterface
+OpenAssetsAtExit=/Game/Blueprints/Widgets/StandartMode/W_Interface.W_Interface
+OpenAssetsAtExit=/Game/Blueprints/Widgets/MenuHUD.MenuHUD
+OpenAssetsAtExit=/Game/Blueprints/Widgets/Loading/W_TransitionWidget.W_TransitionWidget
+OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_MenuBG_3.BP_MenuBG_3
+OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_MenuBG_4.BP_MenuBG_4
+OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_MenuBG_1.BP_MenuBG_1
+OpenAssetsAtExit=/Game/Blueprints/BP_GameInstance.BP_GameInstance
+OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_MenuBG_2.BP_MenuBG_2
 
 [RootWindow]
 ScreenPosition=X=308.000 Y=363.000
@@ -1304,6 +1313,69 @@ BP_Turret_Easy_C.Rendering=True
 BP_Turret_Easy_C.Replication=True
 BP_Turret_Easy_C.Input=True
 BP_Turret_Easy_C.Actor=True
+EdGraphNode_Documentation.Documentation=True
+K2Node_MathExpression.GraphNodeDetail=True
+K2Node_MathExpression.Graph=True
+K2Node_MathExpression.Expression=True
+K2Node_MathExpression.Inputs=True
+K2Node_MathExpression.Outputs=True
+K2Node_BitmaskLiteral.Options=True
+StrProperty.Variable=True
+StrProperty.DefaultValueCategory=True
+K2Node_SwitchString.PinOptions=True
+BP_MenuBgSpawner_C.Tick=True
+BP_MenuBgSpawner_C.Rendering=True
+BP_MenuBgSpawner_C.Replication=True
+BP_MenuBgSpawner_C.Input=True
+BP_MenuBgSpawner_C.Actor=True
+K2Node_SwitchInteger.PinOptions=True
+BP_GlobalSave_C.Sound=True
+BP_GlobalSave_C.Records=True
+BP_GlobalSave_C.Skins=True
+BP_MenuBgSpawner_C.TransformCommon=True
+BP_MenuBgSpawner_C.Default=True
+BP_MenuBG_2_C.Tick=True
+BP_MenuBG_2_C.Default=True
+BP_MenuBG_2_C.Rendering=True
+BP_MenuBG_2_C.Replication=True
+BP_MenuBG_2_C.Input=True
+BP_MenuBG_2_C.Actor=True
+BP_MenuBG_3_C.Tick=True
+BP_MenuBG_3_C.Default=True
+BP_MenuBG_3_C.Rendering=True
+BP_MenuBG_3_C.Replication=True
+BP_MenuBG_3_C.Input=True
+BP_MenuBG_3_C.Actor=True
+BP_MenuBG_4_C.Tick=True
+BP_MenuBG_4_C.Default=True
+BP_MenuBG_4_C.Rendering=True
+BP_MenuBG_4_C.Replication=True
+BP_MenuBG_4_C.Input=True
+BP_MenuBG_4_C.Actor=True
+W_TransitionWidget_C.Default=True
+W_TransitionWidget_C.Appearance=True
+W_TransitionWidget_C.Designer=True
+W_TransitionWidget_C.Input=True
+W_TransitionWidget_C.Interaction=True
+W_TransitionWidget_C.Performance=True
+W_TransitionWidget_C.Layout=True
+W_TransitionWidget_C.Behavior=True
+W_TransitionWidget_C.Render Transform=True
+W_TransitionWidget_C.Clipping=True
+W_TransitionWidget_C.Navigation=True
+MenuHUD_C.Tick=True
+MenuHUD_C.HUD=True
+W_Interface_C.Default=True
+W_Interface_C.Appearance=True
+W_Interface_C.Designer=True
+W_Interface_C.Input=True
+W_Interface_C.Interaction=True
+W_Interface_C.Performance=True
+W_Interface_C.Layout=True
+W_Interface_C.Behavior=True
+W_Interface_C.Render Transform=True
+W_Interface_C.Clipping=True
+W_Interface_C.Navigation=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1320,17 +1392,17 @@ Border="\"Object.Appearance.Background\" \"Object.Render Transform.RenderTransfo
 SizeBox="\"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 W_SeasonButton_C="\"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Render Transform.RenderTransform\" "
-ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+UserWidget=
+ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BottomShadowBrush\" \"Object.Render Transform.RenderTransform\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperSpriteComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-CameraComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
+SceneComponent="\"Object.PostProcess.PostProcessSettings.FilmWhitePoint\" \"Object.PostProcess.PostProcessSettings.FilmShadowTint\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerRed\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerGreen\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerBlue\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
+ActorComponent="\"Object.PostProcess.PostProcessSettings.FilmWhitePoint\" \"Object.PostProcess.PostProcessSettings.FilmShadowTint\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerRed\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerGreen\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerBlue\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
+CameraComponent="\"Object.PostProcess.PostProcessSettings.FilmWhitePoint\" \"Object.PostProcess.PostProcessSettings.FilmShadowTint\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerRed\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerGreen\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerBlue\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
 BP_Character_Main_C=
 PaperCharacter=
 Character=
@@ -1351,11 +1423,11 @@ VerticalBox="\"Object.Render Transform.RenderTransform\" "
 Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Style.WidgetStyle.HoveredThumbImage\" \"Object.Style.WidgetStyle.DisabledThumbImage\" \"Object.Render Transform.RenderTransform\" "
 W_LoadingWidget_C="\"Object.Render Transform.RenderTransform\" "
 GetPackNames="\"Struct.NewLocalVar_0\" "
-W_LevelPack_C="\"Object.Render Transform.RenderTransform\" "
+W_LevelPack_C=
 MoviePlayerSettings="\"Object.Movies.StartupMovies\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" "
 PhysicsSettings="\"Object.Replication.PhysicErrorCorrection\" \"Object.Broadphase.DefaultBroadphaseSettings\" "
-DeveloperSettings=
+DeveloperSettings="\"Object.Compiler.DefaultCompilerOptions\" "
 MovieSceneToolsProjectSettings="\"Object.TrackSettings.FbxSettings\" \"Object.TrackSettings.FbxSettings.FbxSettings[0]\" \"Object.TrackSettings.FbxSettings.FbxSettings[0].PropertyPath\" \"Object.TrackSettings.FbxSettings.FbxSettings[1]\" \"Object.TrackSettings.FbxSettings.FbxSettings[1].PropertyPath\" "
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
 UMGEditorProjectSettings="\"Object.Compiler.DefaultCompilerOptions\" "
@@ -1364,6 +1436,15 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 W_AchievementList_C="\"Object.Render Transform.RenderTransform\" "
 W_LevelChooser_C="\"Object.Render Transform.RenderTransform\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+W_MapButton_C=
+W_InfinityLooseScreen_C="\"Object.Render Transform.RenderTransform\" "
+W_LooseScreen_C="\"Object.Render Transform.RenderTransform\" "
+W_WinScreen_C="\"Object.Render Transform.RenderTransform\" "
+K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
+K2Node_Switch=
+K2Node=
+EdGraphNode=
+W_TransitionWidget_C=
 
 [MessageLog]
 LastLogListing=PIE
@@ -1378,26 +1459,26 @@ ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Backgrounds/BP_Background_4
-MRUItem1=/Game/Blueprints/Backgrounds/BP_Background_3
-MRUItem2=/Game/Blueprints/Backgrounds/BP_Background_2
-MRUItem3=/Game/Blueprints/Backgrounds/BP_Background
-MRUItem4=/Game/Blueprints/Characters/BP_Character_Main
-MRUItem5=/Game/Maps/NightForest/NightForest_1
-MRUItem6=/Game/Blueprints/LevelStuff/BP_Portal
-MRUItem7=/Game/Maps/NightForest/NightForest_3
-MRUItem8=/Game/Blueprints/LevelStuff/BP_SecretChamber
-MRUItem9=/Game/Blueprints/LevelStuff/BP_SecretChamber_Big
-MRUItem10=/Game/Blueprints/LevelStuff/BP_SecretChamber_Small
-MRUItem11=/Game/Blueprints/Widgets/StandartMode/W_Info
-MRUItem12=/Game/Maps/NightForest_2
-MRUItem13=/Game/Blueprints/LevelStuff/BP_Portal_OneTime
-MRUItem14=/Game/Maps/test
-MRUItem15=/Game/Blueprints/Widgets/Menu/FirstLayer/W_SeasonButton
-MRUItem16=/Game/Blueprints/Widgets/Menu/FirstLayer/W_AchievementList
-MRUItem17=/Game/Blueprints/Widgets/Menu/FirstLayer/W_LevelChooser
-MRUItem18=/Game/Blueprints/Backgrounds/Interface_MenuBG
-MRUItem19=/Game/Blueprints/Widgets/Menu/W_Menu
+MRUItem0=/Game/Blueprints/Widgets/InfinityMode/W_InfinityInterface
+MRUItem1=/Game/Blueprints/Widgets/StandartMode/W_Interface
+MRUItem2=/Game/Blueprints/Widgets/MenuHUD
+MRUItem3=/Game/Blueprints/Widgets/Loading/W_TransitionWidget
+MRUItem4=/Game/Blueprints/Backgrounds/BP_MenuBG_4
+MRUItem5=/Game/Blueprints/Backgrounds/BP_MenuBG_3
+MRUItem6=/Game/Blueprints/Backgrounds/BP_Background_4
+MRUItem7=/Game/Blueprints/Backgrounds/BP_Background_3
+MRUItem8=/Game/Blueprints/Backgrounds/BP_MenuBG_2
+MRUItem9=/Game/Blueprints/BP_GameInstance
+MRUItem10=/Game/Blueprints/Backgrounds/BP_MenuBG_1
+MRUItem11=/Game/Blueprints/Widgets/Menu/W_Settings
+MRUItem12=/Game/Blueprints/Widgets/StandartMode/W_Pause
+MRUItem13=/Game/Blueprints/BP_MenuCharacter
+MRUItem14=/Game/Blueprints/BP_GlobalSave
+MRUItem15=/Game/Blueprints/Backgrounds/BP_MenuBgSpawner
+MRUItem16=/Game/Blueprints/Widgets/Menu/SecondLayer/W_InfinityMode
+MRUItem17=/Game/Blueprints/Widgets/Menu/W_Menu
+MRUItem18=/Game/Blueprints/Widgets/Menu/SecondLayer/W_LevelPack
+MRUItem19=/Game/Blueprints/Widgets/StandartMode/W_WinScreen
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1509,6 +1590,19 @@ AssetDialog.CurrentViewType=1
 /Game/Blueprints/Widgets/Menu/FirstLayer/W_AchievementList.W_AchievementList=1
 /Game/Blueprints/Backgrounds/Interface_MenuBG.Interface_MenuBG=1
 /Game/Blueprints/Widgets/Menu/FirstLayer/W_SeasonButton.W_SeasonButton=1
+/Game/Blueprints/Widgets/Menu/SecondLayer/W_MapButton.W_MapButton=1
+/Game/Blueprints/Widgets/Loading/W_LoadingWidget.W_LoadingWidget=1
+/Game/Blueprints/Widgets/InfinityMode/W_InfinityLooseScreen.W_InfinityLooseScreen=1
+/Game/Blueprints/Widgets/StandartMode/W_LooseScreen.W_LooseScreen=1
+/Game/Blueprints/Widgets/StandartMode/W_WinScreen.W_WinScreen=1
+/Game/Blueprints/Widgets/Menu/SecondLayer/W_LevelPack.W_LevelPack=1
+/Game/Blueprints/Widgets/Menu/SecondLayer/W_InfinityMode.W_InfinityMode=1
+/Game/Blueprints/Backgrounds/BP_MenuBgSpawner.BP_MenuBgSpawner=1
+/Game/Blueprints/BP_GlobalSave.BP_GlobalSave=1
+/Game/Blueprints/Widgets/StandartMode/W_Pause.W_Pause=1
+/Game/Blueprints/Widgets/Menu/W_Settings.W_Settings=1
+/Game/Blueprints/Backgrounds/BP_Background_3.BP_Background_3=1
+/Game/Blueprints/Backgrounds/BP_Background_4.BP_Background_4=1
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=OnePane
@@ -2187,18 +2281,18 @@ DeleteVariableInUse_Warning=False
 ChangeVariableType_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/Waterfall/Waterfall_3
-MRUItem1=/Game/Maps/Waterfall/Waterfall_32
-MRUItem2=/Game/Maps/Waterfall/Waterfall_4
-MRUItem3=/Game/Maps/Waterfall/Waterfall_1
-MRUItem4=/Game/Maps/NightForest/NightForest_1
-MRUItem5=/Game/Maps/NightForest/NightForest_3
-MRUItem6=/Game/Maps/NightForest/NightForest_2
-MRUItem7=/Game/Maps/NightForest_2
-MRUItem8=/Game/Maps/NightForest_1
-MRUItem9=/Game/Maps/test
-MRUItem10=/Game/Maps/M_Loading1
-MRUItem11=/Game/Maps/Lake/Lake_20
+MRUItem0=/Game/Maps/M_Menu
+MRUItem1=/Game/Maps/M_Loading1
+MRUItem2=/Game/Maps/Lake/Lake_32
+MRUItem3=/Game/Maps/Waterfall/Waterfall_3
+MRUItem4=/Game/Maps/Waterfall/Waterfall_32
+MRUItem5=/Game/Maps/Waterfall/Waterfall_4
+MRUItem6=/Game/Maps/Waterfall/Waterfall_1
+MRUItem7=/Game/Maps/NightForest/NightForest_1
+MRUItem8=/Game/Maps/NightForest/NightForest_3
+MRUItem9=/Game/Maps/NightForest/NightForest_2
+MRUItem10=/Game/Maps/NightForest_2
+MRUItem11=/Game/Maps/NightForest_1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2223,7 +2317,7 @@ ShowUnusedLayers=True
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,
-CameraComponent=CameraComponent.Lens.Lens
+CameraComponent=CameraComponent.Lens.Lens,CameraComponent.Lens.Lens
 EdGraph=EdGraph.Inputs.InputArgument0,
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,
 GetPackNames=ArrayProperty.DefaultValueCategory.None,
@@ -2287,6 +2381,7 @@ UdpMessagingSettings=MoviePlayerSettings.Movies.StartupMovies,
 WmfMediaSettings=MoviePlayerSettings.Movies.StartupMovies,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_MenuBgSpawner.BP_MenuBgSpawner;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
@@ -2306,7 +2401,6 @@ RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_SecretChamber_Small.BP_SecretChamb
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_Background_3.BP_Background_3;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_SecretChamber.BP_SecretChamber;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
 
 [PathColor]
 /Game/Assets=(R=0.000000,G=0.106163,B=0.500000,A=1.000000)
